--- a/src/styles/Clock.css
+++ b/src/styles/Clock.css
@@ -8,7 +8,7 @@
 
 	font-style: normal;
 	font-weight: 600;
-	font-size: 24px;
+	font-size: 1.8rem;
 	line-height: 28px;
 
 	background: -webkit-linear-gradient(45deg, rgba(200, 4, 232, 1), rgba(177, 50, 255, 1), rgba(119, 124, 255, 1));
