--- a/src/styles/Task.css
+++ b/src/styles/Task.css
@@ -14,6 +14,9 @@
 	color: white;
 
 	margin-bottom: 5rem;
+
+	word-wrap: break-word;
+	overflow-wrap: break-word;
 }
 
 .task-container:hover .buttons {
@@ -22,6 +25,7 @@
 
 .task-text-content {
 	/* Science experiment */
+	max-width: 90%;
 
 	font-weight: 600;
 	font-size: 24px;
