--- a/src/styles/TaskInput.css
+++ b/src/styles/TaskInput.css
@@ -3,10 +3,12 @@
 	flex-direction: column;
 
 	align-items: flex-end;
+
+	width: 100rem;
 }
 
 .task-input {
-	width: 100rem;
+	width: 100%;
 	height: 6rem;
 
 	background: linear-gradient(90.53deg, #3668e9 11.31%, rgba(70, 137, 236, 0.85) 99.73%);
